[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "StoryMaker-karjakak"
version = "1.0.3"

requires-python = ">=3.10"
authors = [{name = "karjakak", email = "kakkarja.github@gmail.com"}]
description = "Story Maker for devotion and blessing for others."
readme = "README.md"

classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
]

[project.gui-scripts]
SMD = "story_maker:main"

[tool.setuptools.packages.find]
where = ["."]
